--- a/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.Business.Tests/CheckoutChallenge.PaymentGateway.Business.Tests.csproj
+++ b/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.Business.Tests/CheckoutChallenge.PaymentGateway.Business.Tests.csproj
@@ -1,12 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -14,6 +19,5 @@
     <ProjectReference Include="..\CheckoutChallenge.PaymentGateway.Data.GenericImplementation\CheckoutChallenge.PaymentGateway.Data.GenericImplementation.csproj" />
     <ProjectReference Include="..\CheckoutChallenge.PaymentGateway.Data\CheckoutChallenge.PaymentGateway.Data.csproj" />
   </ItemGroup>
-
 
 </Project>
