Added Merchants flow (Add, Get)

--- a/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.Business.Tests/CheckoutChallenge.PaymentGateway.Business.Tests.csproj
+++ b/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.Business.Tests/CheckoutChallenge.PaymentGateway.Business.Tests.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\CheckoutChallenge.PaymentGateway.Business\CheckoutChallenge.PaymentGateway.Business.csproj" />
     <ProjectReference Include="..\CheckoutChallenge.PaymentGateway.Data.GenericImplementation\CheckoutChallenge.PaymentGateway.Data.GenericImplementation.csproj" />
     <ProjectReference Include="..\CheckoutChallenge.PaymentGateway.Data\CheckoutChallenge.PaymentGateway.Data.csproj" />
+    <ProjectReference Include="..\CheckoutChallenge.PaymentGateway.Domain\CheckoutChallenge.PaymentGateway.Domain.csproj" />
   </ItemGroup>
 
 </Project>
