--- a/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.Business/CheckoutChallenge.PaymentGateway.Business.csproj
+++ b/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.Business/CheckoutChallenge.PaymentGateway.Business.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CheckoutChallenge.PaymentGateway.Data\CheckoutChallenge.PaymentGateway.Data.csproj" />
+    <ProjectReference Include="..\CheckoutChallenge.PaymentGateway.Domain\CheckoutChallenge.PaymentGateway.Domain.csproj" />
   </ItemGroup>
 
 </Project>
