--- a/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.WebApi/appsettings.json
+++ b/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://Container_MongoDB:27017",
     "DatabaseName": "CheckoutPaymentGateway"
   },
   "Logging": {
