Payment flow - WIP

--- a/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.WebApi/appsettings.json
+++ b/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "BankServiceApiSettings": {
+    "BaseUrl": "http://Container_BankMockApi:4500"
+  },
   "MongoDbSettings": {
     "ConnectionString": "mongodb://Container_MongoDB:27017",
     "DatabaseName": "CheckoutPaymentGateway"
