--- a/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.Business/CheckoutChallenge.PaymentGateway.Business.csproj
+++ b/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.Business/CheckoutChallenge.PaymentGateway.Business.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.6.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
