--- a/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.WebApi/appsettings.json
+++ b/src/CheckoutChallenge.PaymentGateway/CheckoutChallenge.PaymentGateway.WebApi/appsettings.json
@@ -14,7 +14,8 @@
     }
   },
   "AppSettings": {
-    "Secret": "SECRET SAYS NO"
+    "Secret": "COMPUTER SAYS NO SECRET",
+    "Issuer": "LeIssuer"
   },
   "AllowedHosts": "*"
 }
